добавлены события погодных предупреждений