@@ -1,5 +1,6 @@
 package ru.urfu.webapplication.service;
 
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
 import ru.urfu.webapplication.client.VisualCrossingClient;
 import ru.urfu.webapplication.dto.ForecastResponse;
@@ -16,15 +17,41 @@ import java.util.ArrayList;
 import java.util.List;
 
 import lombok.extern.slf4j.Slf4j;
+import ru.urfu.webapplication.event.WeatherAlertEvent;
 
 @Slf4j
 @Service
 public class WeatherService {
     private final VisualCrossingClient visualCrossingClient;
     private static final DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+    private final ApplicationEventPublisher eventPublisher;
 
-    public WeatherService(VisualCrossingClient visualCrossingClient) {
+    public WeatherService(VisualCrossingClient visualCrossingClient, ApplicationEventPublisher eventPublisher) {
         this.visualCrossingClient = visualCrossingClient;
+        this.eventPublisher = eventPublisher;
+    }
+
+    //Проверка погодных предупреждений
+    private void checkAndPublishAlert(String city, String date, Double tempMax, Double tempMin, Double windSpeed, String conditions) {
+        String alert = null;
+        if (tempMax > 30) {
+            alert = "Жара: " + tempMax + "градусов";
+        } else if (tempMin < -20) {
+            alert = "Сильный мороз: " + tempMin + "градусов";
+        } else if (windSpeed > 15) {
+            alert = "Сильный ветер: " + windSpeed + " м/с";
+        } else if (conditions != null) {
+            String cond = conditions.toLowerCase();
+            if (cond.contains("rain") ||
+                    cond.contains("дождь") ||
+                    cond.contains("snow") ||
+                    cond.contains("снег")) {
+                alert = "Осадки: " + conditions;
+            }
+        }
+        if (alert != null) {
+            eventPublisher.publishEvent(new WeatherAlertEvent(this, city, alert, date));
+        }
     }
 
     //Текущая погода по городу
@@ -44,6 +71,12 @@ public class WeatherService {
     private WeatherResponse fetchWeatherFromApi(String location,  String lang) {
         log.info("Вызов API для получения погоды по локации {}", location);
         VisualCrossingResponse response = visualCrossingClient.getCurrentWeather(location, lang);
+        checkAndPublishAlert(location, "текущее время",
+                response.getCurrentConditions().getTemp(),
+                response.getCurrentConditions().getTemp(),
+                response.getCurrentConditions().getWindSpeed(),
+                response.getCurrentConditions().getConditions());
+
         return new WeatherResponse(
                 response.getResolvedAddress(),
                 response.getCurrentConditions().getTemp(),
@@ -87,6 +120,7 @@ public class WeatherService {
                         day.getSunrise(),
                         day.getSunset()
                 ));
+                checkAndPublishAlert(city, day.getDatetime(), day.getTempMax(), day.getTempMin(), day.getWindSpeed(), day.getConditions());
             }
             log.info("Возвращено {} дней прогноза", dailyList.size());
         }
@@ -115,6 +149,7 @@ public class WeatherService {
                         day.getSunrise(),
                         day.getSunset()
                 ));
+                checkAndPublishAlert(city, day.getDatetime(), day.getTempMax(), day.getTempMin(), day.getWindSpeed(), day.getConditions());
             }
         }
         return new HistoricalResponse(
@@ -129,6 +164,12 @@ public class WeatherService {
     public WeatherResponse getWeatherAtTime(String city, String dateTime, String lang) {
         log.info("Запрос погоды для города {} на время {}", city, dateTime);
         VisualCrossingResponse response = visualCrossingClient.getWeatherAtTime(city, dateTime, lang);
+        checkAndPublishAlert(city, dateTime,
+                response.getCurrentConditions().getTemp(),
+                response.getCurrentConditions().getTemp(),
+                response.getCurrentConditions().getWindSpeed(),
+                response.getCurrentConditions().getConditions());
+
         return new WeatherResponse(
                 response.getResolvedAddress(),
                 response.getCurrentConditions().getTemp(),
@@ -146,13 +187,10 @@ public class WeatherService {
     //Почасовой прогноз погоды
     public HourlyForecastResponse getHourlyForecast(String city, String date, String lang) {
         log.info("Запрос почасового прогноза для города {} на {}", city, date);
-
         VisualCrossingResponse response = visualCrossingClient.getHourlyForecast(city, date, lang);
-
         List<HourlyForecastResponse.HourlyData> hourlyList = new ArrayList<>();
-
         if (response.getDays() != null && !response.getDays().isEmpty()) {
-            Day day = response.getDays().get(0);           // ← Day, а не DayResponse
+            Day day = response.getDays().getFirst();
             if (day.getHours() != null) {
                 for (Hour hour : day.getHours()) {
                     hourlyList.add(HourlyForecastResponse.HourlyData.builder()
@@ -166,10 +204,10 @@ public class WeatherService {
                             .conditions(hour.getConditions())
                             .uvIndex(hour.getUvIndex())
                             .build());
+                    checkAndPublishAlert(city, hour.getDatetime(), hour.getTemp(), day.getTemp(), hour.getWindSpeed(), hour.getConditions());
                 }
             }
         }
-
         return HourlyForecastResponse.builder()
                 .location(response.getResolvedAddress())
                 .date(date)
